# mercenary

./: .gitignore  .gitmodules  CMakeLists.txt  Database.md  README.md  database.sql  nginx-config  shell.nix
include/: api.h  auth.h  constants.h  pub.h
include/database/: con.h
public/: index.html
src/: api.c  auth.c  main.c  pub.c
src/database/: con.c  db.c
